# CCDPP

./: CMakeLists.txt  LICENSE  README.md  runCCDPP.cpp  runCCDPP_MPI.cpp  runCCDPP_MPI.sh  runCCDPP_MPI_start.sh  runCCDPP_start.sh
alg/: CCDPP.h  CCDPP_MPI.h
struct/: Rating.h  SparseMatrix.h
util/: Base.h  FileUtil.h  Parameter.h  RandomUtil.h
